scripts/tests/errors/err_wrong_arg_count.bu
// Test: wrong number of arguments to function
// Expected: runtime error about argument count

def foo(a, b, c) {
    return a + b + c;
}

foo(1);
